# SurfATTPP

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml  test.yml
examples/00_checkerboard_iso/: input_params.yml  plot_model.ipynb  run_this_example.sh
examples/02_checkerboard_radial_ani/: README.md  input_params.yml  plot_model.ipynb  run_this_example.sh
examples/04_hawaii_topo/: rotatation.ipynb  run_topo_test.sh
external_libs/: CMakeLists.txt
include/: argparser.h  config.h  decomposer.h  eikonal_solver.h  h5io.h  input_params.h  inversion.h  inversion1d.h  logger.h  minpack.hpp  model_grid.h  optimize.h  parallel.h  postproc.h  preproc.h  sph2loc.h  src_rec.h  surf_grid.h  surfdisp.h  topo.h  utils.h  version.h.in  xdmf.h
src/: SURFATT_cb_fwd.cxx  SURFATT_rotate_model.cxx  SURFATT_rotate_src_rec.cxx  SURFATT_rotate_topo.cxx  SURFATT_tomo.cxx  SURFATT_totate_topo.cxx  decomposer.cpp  eikonal_solver.cpp  h5io.cpp  input_params.cpp  inversion.cpp  inversion1d.cpp  logger.cpp  model_grid.cpp  optimize.cpp  parallel.cpp  postproc.cpp  preproc.cpp  src_rec.cpp  surf_grid.cpp  surfdisp.cpp  topo.cpp  xdmf.cpp
src/minpack/: CMakeLists.txt  minpack.cpp  minpack_cwrap.f90
src/surfker/: CMakeLists.txt  constants.f90  disper.cpp  disper.hpp  lvker.cpp  rlker.cpp  slegn96_c_api.f90  sregn96_c_api.f90  surfdisp.hpp  surfdisp96_c_api.f90  surfker.cpp  surfker.hpp
tests/: CMakeLists.txt
tests/csv_test/: test_csv.cpp
tests/eigen_test/: test_eigen_mpi.cpp
tests/eikonal_test/: eikonal_solver_cwrap.f90  test_eikonal.cpp
tests/hdf5_test/: test_h5io.cpp
tests/interp_test/: test_interp2d_dump.cpp
tests/logger_test/: test_logger.cpp
tests/minpack_test/: test_minpack.cpp
tests/surfdisp_test/: test_surfdisp.cpp
tests/yaml_test/: input_params.yml  test_input_params.cpp  test_input_params_mpi.cpp
